<resources>
    <string name="app_name">Music Player</string>
    <string name="login_text_field">Логин</string>
    <string name="email_text_field">E-Mail</string>
    <string name="password_text_field">Пароль</string>
    <string name="repeat_password_text_field">Повторите пароль</string>
    <string name="registerCheckBox">Согласен с условиями пользования</string>
    <string name="registerButton">Зарегистрироваться</string>
    <string name="changeModeButton1">Войти в аккаунт</string>
    <string name="changeModeButton2">Создать аккаунт</string>
    <string name="loginButton">Войти</string>
    <string name="incorrect_login_or_password_alert">Неверный логин или пароль</string>
    <string name="terms_of_use_alert">Вы не приняли условия пользования</string>
    <string name="passwords_not_match_alert">Пароли не совпадают</string>
    <string name="incorrect_email_alert">Некорректный E-Mail</string>
    <string name="incorrect_login_alert">Некорректный логин</string>
    <string name="login_already_exists">Логин уже существует</string>
    <string name="quit_alert_title">Выйти из приложения?</string>
    <string name="alert_yes_option">Да</string>
    <string name="alert_no_option">Нет</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="performer">Performer</string>
    <string name="song">Song</string>
    <string name="_0_00">0:00</string>
    <string name="_4_10">4:10</string>
    <string name="main_page_string">Главная</string>
    <string name="search_page_string">Поиск</string>
    <string name="favorite_page_string">Любимые</string>
    <string name="open_file_menu_string">Получить трек из хранилища</string>
    <string name="exit_from_account_menu_string">Выйти из аккаунта</string>
    <string name="collection_string">Коллекция</string>
    <string name="string_favorite">Любимые</string>
    <string name="search_string">Поиск</string>
    <string name="search_field_string">Трек, исполнитель</string>
    <string name="start_typing_string">Начните вводить запрос..</string>
    <string name="nothing_found_string">Ничего не найдено</string>
    <string name="get_song_from_api_string">Получить трек из API</string>
    <string name="provide_spotify_token">Добавить Spotify Token</string>
    <string name="greeting">С возвращением!</string>
    <string name="greeting2">Включите свою любимую мызыку</string>
</resources>